# Time_tracker

./: Cargo.toml  README.md
.github/workflows/: ci.yml
scripts/: notify.py
src/: lib.rs  main.rs
