[package]
name = "tt"
version = "0.1.0"
edition = "2021"

[lib]
name = "tt"
path = "src/lib.rs"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

